index file chsnges

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<table border="1">
 				<thead>
 					<tr>
-						<th>Kingdom</th>
-						<th>Lords</th>
+						<th>Kingdomnirali</th>
+						<th>Lordsnirali</th>
 						<th>Symbol</th>
 					</tr>
 				</thead>
